// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select - the fancy one event testing - LUIfied select should all the styles with require snapshot 1`] = `
.c0 {
  color: #474747;
}

.c2 {
  width: 1em;
  height: 1em;
  vertical-align: middle;
  display: inline-block;
}

.c2 > svg {
  fill: rgba(0,192,165,1);
  width: inherit;
  height: inherit;
}

.c2 .fillPath {
  fill: rgba(0,192,165,1);
}

.c1 {
  box-sizing: border-box;
  line-height: 1.333;
  white-space: normal;
  border-spacing: 2px;
  text-align: left;
  word-spacing: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
}

.c3 {
  -webkit-transition: -webkit-transform 0.5s ease 0s;
  -webkit-transition: transform 0.5s ease 0s;
  transition: transform 0.5s ease 0s;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

<div>
  <div
    class="c0"
  >
    <span
      class="c1"
    >
      <div
        class=" css-lp3mvm-container"
      >
        <div
          class=" css-3vppv-control"
        >
          <div
            class=" css-g1d714-ValueContainer"
          >
            <div
              class=" css-ep7en5-placeholder"
            >
              event testing
            </div>
            <div
              class="css-8c79i4-Input"
            >
              <div
                class=""
                style="display: inline-block;"
              >
                <input
                  aria-autocomplete="list"
                  autocapitalize="none"
                  autocomplete="off"
                  autocorrect="off"
                  id="react-select-19-input"
                  spellcheck="false"
                  style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                  tabindex="0"
                  type="text"
                  value=""
                />
                <div
                  style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
                />
              </div>
            </div>
          </div>
          <div
            class=" css-1hb7zxy-IndicatorsContainer"
          >
            <span
              class=" css-1okebmr-indicatorSeparator"
            />
            <div
              style="display: flex; padding: 0px 8px 4px 4px; transition: color 150ms; box-sizing: border-box; cursor: pointer;"
            >
              <div>
                <span
                  class="c2 c3"
                  color="primary.500"
                  data-testid="dropDownIcon"
                >
                  <svg
                    height="1em"
                    viewBox="0 0 24 24"
                    width="1em"
                  >
                    <path
                      d="M7.41 7.84L12 12.42l4.59-4.58L18 9.25l-6 6-6-6z"
                    />
                    <path
                      d="M0-.75h24v24H0z"
                      fill="none"
                    />
                  </svg>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </span>
  </div>
</div>
`;

exports[`Select - the fancy one render multiple value - LUIfied select should all the styles with require snapshot 1`] = `
.c0 {
  color: #474747;
}

.c2 {
  width: 1em;
  height: 1em;
  vertical-align: middle;
  display: inline-block;
}

.c2 > svg {
  fill: rgba(0,192,165,1);
  width: inherit;
  height: inherit;
}

.c2 .fillPath {
  fill: rgba(0,192,165,1);
}

.c1 {
  box-sizing: border-box;
  line-height: 1.333;
  white-space: normal;
  border-spacing: 2px;
  text-align: left;
  word-spacing: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
}

.c3 {
  -webkit-transition: -webkit-transform 0.5s ease 0s;
  -webkit-transition: transform 0.5s ease 0s;
  transition: transform 0.5s ease 0s;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

<div>
  <div
    class="c0"
  >
    <span
      class="c1"
    >
      <div
        class=" css-lp3mvm-container"
      >
        <div
          class=" css-3vppv-control"
        >
          <div
            class=" css-g1d714-ValueContainer"
          >
            <div
              class=" css-ep7en5-placeholder"
            >
              multiple select
            </div>
            <div
              class="css-8c79i4-Input"
            >
              <div
                class=""
                style="display: inline-block;"
              >
                <input
                  aria-autocomplete="list"
                  autocapitalize="none"
                  autocomplete="off"
                  autocorrect="off"
                  id="react-select-14-input"
                  spellcheck="false"
                  style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                  tabindex="0"
                  type="text"
                  value=""
                />
                <div
                  style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
                />
              </div>
            </div>
          </div>
          <div
            class=" css-1hb7zxy-IndicatorsContainer"
          >
            <span
              class=" css-1okebmr-indicatorSeparator"
            />
            <div
              style="display: flex; padding: 0px 8px 4px 4px; transition: color 150ms; box-sizing: border-box; cursor: pointer;"
            >
              <div>
                <span
                  class="c2 c3"
                  color="primary.500"
                  data-testid="dropDownIcon"
                >
                  <svg
                    height="1em"
                    viewBox="0 0 24 24"
                    width="1em"
                  >
                    <path
                      d="M7.41 7.84L12 12.42l4.59-4.58L18 9.25l-6 6-6-6z"
                    />
                    <path
                      d="M0-.75h24v24H0z"
                      fill="none"
                    />
                  </svg>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </span>
  </div>
</div>
`;

exports[`Select - the fancy one render single value - LUIfied select should all the styles with require snapshot 1`] = `
.c0 {
  color: #474747;
}

.c2 {
  width: 1em;
  height: 1em;
  vertical-align: middle;
  display: inline-block;
}

.c2 > svg {
  fill: rgba(0,192,165,1);
  width: inherit;
  height: inherit;
}

.c2 .fillPath {
  fill: rgba(0,192,165,1);
}

.c1 {
  box-sizing: border-box;
  line-height: 1.333;
  white-space: normal;
  border-spacing: 2px;
  text-align: left;
  word-spacing: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
}

.c3 {
  -webkit-transition: -webkit-transform 0.5s ease 0s;
  -webkit-transition: transform 0.5s ease 0s;
  transition: transform 0.5s ease 0s;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

<div>
  <div
    class="c0"
  >
    <span
      class="c1"
    >
      <div
        class=" css-lp3mvm-container"
      >
        <div
          class=" css-3vppv-control"
        >
          <div
            class=" css-g1d714-ValueContainer"
          >
            <div
              class=" css-ep7en5-placeholder"
            >
              single select
            </div>
            <div
              class="css-8c79i4-Input"
            >
              <div
                class=""
                style="display: inline-block;"
              >
                <input
                  aria-autocomplete="list"
                  autocapitalize="none"
                  autocomplete="off"
                  autocorrect="off"
                  id="react-select-6-input"
                  spellcheck="false"
                  style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                  tabindex="0"
                  type="text"
                  value=""
                />
                <div
                  style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
                />
              </div>
            </div>
          </div>
          <div
            class=" css-1hb7zxy-IndicatorsContainer"
          >
            <span
              class=" css-1okebmr-indicatorSeparator"
            />
            <div
              style="display: flex; padding: 0px 8px 4px 4px; transition: color 150ms; box-sizing: border-box; cursor: pointer;"
            >
              <div>
                <span
                  class="c2 c3"
                  color="primary.500"
                  data-testid="dropDownIcon"
                >
                  <svg
                    height="1em"
                    viewBox="0 0 24 24"
                    width="1em"
                  >
                    <path
                      d="M7.41 7.84L12 12.42l4.59-4.58L18 9.25l-6 6-6-6z"
                    />
                    <path
                      d="M0-.75h24v24H0z"
                      fill="none"
                    />
                  </svg>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </span>
  </div>
</div>
`;
